# ralphboost

./: .env.example  .gitignore  HANDOFF_SUMMARY.md  LICENSE  MANIFEST.in  RALPHBOOST_DEPLOYMENT_HANDOFF.md  RALPHBOOST_GEMINI_RESEARCH_HANDOFF.md  RALPHBOOST_HANDOFF.md  RALPHBOOST_VISION.md  README.md  STATUS_REPORT_ARCHITECT.md  list_models.py  pyproject.toml  requirements.txt  validate_gemini_stream.py
benchmarks/: README.md  kepler_homerun.py  kepler_transitdomain_eval.py
benchmarks/tier1/: lru_cache.md  prime_sieve.md  topk_stream.md
benchmarks/tier2/: csv_validator.md  env_parser.md
benchmarks/tier3/: matrix_multiply.md  monte_carlo_pi.md
examples/: colab_demo.py  kepler_agentic_loop.py  kepler_demo.py  uc1_vibration.py  uc2_retail.py  uc3_exoplanet_synth.py
legacy/: README.md
ralphboost/: __init__.py  actions.py  api.py  autopatch.py  cli.py  config.py  contract.py  contract_patch.py  gemini_client.py  loop.py  patch.py  report.py  suite.py  telemetry.py  types.py  verifier.py
ralphboost/agents/: base.py  fft_agent.py  gemini.py  mock.py
ralphboost/core/: engine.py  estimator.py  objectives.py  state.py  strategy_loop.py
ralphboost/domains/: base.py  (+3 more)
tasks/: challenge_reliability.txt  workflow_protocol_doc.txt  workflow_release_checklist.txt  workflow_telemetry_schema.txt
tests/: test_agent_schema.py  test_api.py  test_code_loop.py  test_domain_signal.py  test_domain_timeseries.py  test_engine.py  test_fft_agent.py  test_gemini_client.py  test_gemini_connection.py  test_refiner.py  test_rfc_truth.py  test_transit_domain.py  test_verifier.py
(+5 files in other folders)
